--- a/vignettes/II-formatting.Rmd
+++ b/vignettes/II-formatting.Rmd
@@ -27,10 +27,10 @@ This vignette describes how to format all your files.
 
 ## Structural annotations of your features
 
-For the moment, we support annotations coming from 4 different annotation tools:
+For the moment, we support annotations coming from 3 different annotation tools:
 
+<!-- * [GNPS](https://gnps.ucsd.edu) -->
 * MS^1^ exact mass-based library search
-* [GNPS](https://gnps.ucsd.edu)
 * [SIRIUS](https://bio.informatik.uni-jena.de/software/sirius)
 * Formatted results of **ISDB** annotation.
 
@@ -95,15 +95,15 @@ targets::tar_visnetwork(
 )
 ```
 
-#### GNPS
+<!-- #### GNPS -->
 
-We also provide an example GNPS job id, which is: `41c6068e905d482db5698ad81d145d7c`
+<!-- We also provide an example GNPS job id, which is: `41c6068e905d482db5698ad81d145d7c` -->
 
-Before running the corresponding code, do not forget to modify `inst/params/user/prepare_*yourAnnotationTool*.yaml`.
+<!-- Before running the corresponding code, do not forget to modify `inst/params/user/prepare_*yourAnnotationTool*.yaml`. -->
 
-Depending on the annotation tool you used, you can format its results using:
+<!-- Depending on the annotation tool you used, you can format its results using: -->
 
-```{r annotate-gnps, results="hide", message=FALSE, warning=FALSE}
+```{r annotate-gnps, eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, results="hide"}
 source(file = "inst/scripts/prepare_annotations_gnps.R")
 ```
 
@@ -127,7 +127,7 @@ targets::tar_visnetwork(
 #### Sirius
 
 As SIRIUS jobs are long to perform, we provide an already computed SIRIUS Workspace.
-It has been generated on the same MGF as the GNPS and ISDB jobs with the following command:
+It has been generated on the same MGF as the  <!-- GNPS and --> ISDB job with the following command:
 
 ```{bash eval=FALSE, include=TRUE}
 config --IsotopeSettings.filter true --FormulaSearchDB BIO,COCONUT,GNPS,KNAPSACK,UNDP,PLANTCYC --Timeout.secondsPerTree 0 --FormulaSettings.enforced HCNOP --Timeout.secondsPerInstance 0 --AdductSettings.detectable [[M + H3N + H]+, [M - H2O + H]+, [M + K]+, [M - H4O2 + H]+, [M + H]+, [M + Na]+] --UseHeuristic.mzToUseHeuristicOnly 650 --AlgorithmProfile orbitrap --IsotopeMs2Settings IGNORE --MS2MassDeviation.allowedMassDeviation 5.0ppm --NumberOfCandidatesPerIon 1 --UseHeuristic.mzToUseHeuristic 300 --FormulaSettings.detectable B,Cl,Br,Se,S --NumberOfCandidates 10 --ZodiacNumberOfConsideredCandidatesAt300Mz 10 --ZodiacRunInTwoSteps true --ZodiacEdgeFilterThresholds.minLocalConnections 10 --ZodiacEdgeFilterThresholds.thresholdFilter 0.95 --ZodiacEpochs.burnInPeriod 2000 --ZodiacEpochs.numberOfMarkovChains 10 --ZodiacNumberOfConsideredCandidatesAt800Mz 50 --ZodiacEpochs.iterations 20000 --AdductSettings.enforced , --AdductSettings.fallback [[M + K]+, [M + H]+, [M + Na]+] --FormulaResultThreshold true --InjectElGordoCompounds true --StructureSearchDB BIO,COCONUT,GNPS,KNAPSACK,UNDP,PLANTCYC --RecomputeResults false formula zodiac fingerprint structure canopus
@@ -176,13 +176,13 @@ Within our workflow, we offer a new way to attribute chemical classes to your fe
 It is analog to [Network Annotation Propagation](https://ccms-ucsd.github.io/GNPSDocumentation/nap/), but uses the edges of your network instead of the clusters.
 This makes more sense in our view, as also recently illustrated by [CANOPUS](https://doi.org/10.1038/s41587-020-0740-8).
 
-All steps can take both manual inputs or GNPS metadata directly from your GNPS job ID.
+<!-- All steps can take both manual inputs or GNPS metadata directly from your GNPS job ID. -->
 
 We are currently also working on CANOPUS integration for chemical class annotation but this implies way heavier computations and we want to offer our users a **fast** solution.
 
-### Case when no network available
+### Generating a network
 
-If no network was generated previously on GNPS (no GNPS job ID provided), it can be generated using:
+A network can be generated using:
 
 ```{r create-edges, results="hide", message=FALSE, warning=FALSE}
 source(file = "inst/scripts/create_edges_spectra.R")
@@ -221,7 +221,7 @@ source(file = "inst/scripts/prepare_features_components.R")
 This step allows you to attribute biological source information to your features.
 If all your features come from a single extract, it will attribute the biological source of your extract to all your features.
 If you have multiple extracts aligned, it will take the *n* (according to your parameters) highest intensities of your aligned feature table and attribute the biological source of corresponding extracts.
-It can take both manual inputs or GNPS metadata directly from your GNPS job ID.
+<!-- It can take both manual inputs or GNPS metadata directly from your GNPS job ID. -->
 
 Before running the corresponding code, do not forget to modify `inst/params/user/prepare_taxa.yaml`.
 
