--- a/vignettes/IV-actual-performance.Rmd
+++ b/vignettes/IV-actual-performance.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "4 Actual Performance"
 author: "Adriano Rutz"
+creative_commons: CC BY-SA
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 opengraph:
@@ -9,6 +10,8 @@ opengraph:
       alt: "Taxonomically Informed Metabolite Annotation"
     twitter:
       creator: "@adafede"
+    mastodon:
+      author_name: "@adafede@mastodon.online"
 vignette: >
   %\VignetteIndexEntry{4 Actual Performance}
   %\VignetteEngine{knitr::rmarkdown}
