--- a/vignettes/timaR.Rmd
+++ b/vignettes/timaR.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "General comments about the infrastructure"
 author: "Adriano Rutz"
+creative_commons: CC BY-SA
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 opengraph:
@@ -9,6 +10,8 @@ opengraph:
       alt: "Taxonomically Informed Metabolite Annotation"
     twitter:
       creator: "@adafede"
+    mastodon:
+      author_name: "@adafede@mastodon.online"
 vignette: >
   %\VignetteIndexEntry{General comments about the infrastructure}
   %\VignetteEngine{knitr::rmarkdown}
