--- a/vignettes/I-inputs.Rmd
+++ b/vignettes/I-inputs.Rmd
@@ -144,6 +144,84 @@ source(file = "inst/scripts/get_example_spectra.R")
 
 ### Libraries
 
+#### Spectra
+
+First, you need spectral libraries to perform MS^2^-based annotation.
+
+##### Experimental
+
+You can of course use your own experimental spectral library to perform MS^2^ annotation.
+We currently support spectral libraries in MSP or MGF format.
+
+To get a small example:
+
+```{r spectra-rt, results="hide", message=FALSE, warning=FALSE}
+get_file(
+  url = paths$urls$examples$spectral_lib_mini$with_rt,
+  export = paths$data$source$libraries$spectra$exp$with_rt
+)
+```
+
+###### MassBank
+
+MassBank can be easily accessed downloaded using:
+
+```{r spectra-mb, results="hide", message=FALSE, warning=FALSE}
+source(file = "inst/scripts/get_massbank_spectra.R")
+```
+
+We are currently working to get all MONA and GNPS experimental spectra easily available.
+
+However, programmatic download of MONA is currently not supported, and GNPS spectra require some pre-processing.
+
+So for now, either use your GNPS job ID and download MONA manually, helpers to use them later on are already available. (see `inst/scripts/prepare_libraries_spectra_exp_mona.R` and `inst/scripts/prepare_libraries_spectra_is_hmdb.R`, respectively).
+
+In case you want to format your own spectral library to use it for spectral matching, adapt the steps in `inst/params/user/prepare_libraries_spectra.yaml` and `inst/params/user/annotate_spectra.yaml`.
+
+##### *In silico*
+
+As the availability of experimental spectra is limited, we can take advantage of *in silico* generated spectra.
+
+#### LOTUS
+
+We generated an *in silico* spectral library of the structures found in LOTUS using [CFM4](https://doi.org/10.1021/acs.analchem.1c01465).
+For more info, see <https://doi.org/10.5281/zenodo.5607185>.
+
+In order to get it:
+
+```{r get-isdb-lotus, results="hide", message=FALSE, warning=FALSE}
+source(file = "inst/scripts/get_isdb_lotus.R")
+```
+
+And as previously, then prepare it:
+
+```{r prepare-isdb-lotus-1, results="hide", message=FALSE, warning=FALSE}
+source(file = "inst/scripts/prepare_libraries_spectra_is_lotus.R")
+```
+
+```{r prepare-isdb-lotus-2, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
+targets::tar_visnetwork(
+  names = starts_with("lib_spe"),
+  exclude = c(
+    contains("benchmark"),
+    contains("par_"),
+    contains("paths")
+  ),
+  targets_only = TRUE,
+  degree_from = 8
+)
+```
+
+As you can see, both MS polarities are available!
+
+Again, you can also complement with the in silico spectra from HMDB (not running by default as quite long):
+
+#### HMDB
+
+```{r get-isdb-hmdb, eval=FALSE, include=TRUE}
+source(file = "inst/scripts/get_isdb_hmdb.R")
+```
+
 #### Retention times
 
 This library is **optional**.
@@ -335,84 +413,6 @@ Before running the corresponding code, do not forget to modify `inst/params/user
 
 ```{r adducts-2, results="hide", message=FALSE, warning=FALSE}
 source(file = "inst/scripts/prepare_libraries_adducts.R")
-```
-
-#### Spectra
-
-Finally, you need spectral libraries to perform MS^2^-based annotation.
-
-##### Experimental
-
-You can of course use your own experimental spectral library to perform MS^2^ annotation.
-We currently support spectral libraries in MSP or MGF format.
-
-To get a small example:
-
-```{r spectra-rt, results="hide", message=FALSE, warning=FALSE}
-get_file(
-  url = paths$urls$examples$spectral_lib_mini$with_rt,
-  export = paths$data$source$libraries$spectra$exp$with_rt
-)
-```
-
-###### MassBank
-
-MassBank can be easily accessed downloaded using:
-
-```{r spectra-mb, results="hide", message=FALSE, warning=FALSE}
-source(file = "inst/scripts/get_massbank_spectra.R")
-```
-
-We are currently working to get all MONA and GNPS experimental spectra easily available.
-
-However, programmatic download of MONA is currently not supported, and GNPS spectra require some pre-processing.
-
-So for now, either use your GNPS job ID and download MONA manually, helpers to use them later on are already available. (see `inst/scripts/prepare_libraries_spectra_exp_mona.R` and `inst/scripts/prepare_libraries_spectra_is_hmdb.R`, respectively).
-
-In case you want to format your own spectral library to use it for spectral matching, adapt the steps in `inst/params/user/prepare_libraries_spectra.yaml` and `inst/params/user/annotate_spectra.yaml`.
-
-##### *In silico*
-
-As the availability of experimental spectra is limited, we can take advantage of *in silico* generated spectra.
-
-#### LOTUS
-
-We generated an *in silico* spectral library of the structures found in LOTUS using [CFM4](https://doi.org/10.1021/acs.analchem.1c01465).
-For more info, see <https://doi.org/10.5281/zenodo.5607185>.
-
-In order to get it:
-
-```{r get-isdb-lotus, results="hide", message=FALSE, warning=FALSE}
-source(file = "inst/scripts/get_isdb_lotus.R")
-```
-
-And as previously, then prepare it:
-
-```{r prepare-isdb-lotus-1, results="hide", message=FALSE, warning=FALSE}
-source(file = "inst/scripts/prepare_libraries_spectra_is_lotus.R")
-```
-
-```{r prepare-isdb-lotus-2, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(
-  names = starts_with("lib_spe"),
-  exclude = c(
-    contains("benchmark"),
-    contains("par_"),
-    contains("paths")
-  ),
-  targets_only = TRUE,
-  degree_from = 8
-)
-```
-
-As you can see, both MS polarities are available!
-
-Again, you can also complement with the in silico spectra from HMDB (not running by default as quite long):
-
-#### HMDB
-
-```{r get-isdb-hmdb, eval=FALSE, include=TRUE}
-source(file = "inst/scripts/get_isdb_hmdb.R")
 ```
 
 You are finally ready for the next step, with all dictionaries, inputs, and libraries you need!
