--- a/vignettes/II-preparing.Rmd
+++ b/vignettes/II-preparing.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = "..")
 ```
 
-This vignette describes how to format all your files.
+This vignette describes the main steps of the annotation process.
 
 ## Structural annotations of your features
 
@@ -41,34 +41,17 @@ These annotations are of the lowest possible quality.
 However, they allow to annotate unusual adducts, in-source fragments thanks to different small tricks implemented.
 Try to really restrict the adduct list and structure-organism pairs you want to consider as possibilities explode rapidly.
 
-```{r timar, results="hide", message=FALSE, warning=FALSE}
+```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 library("timaR")
 ```
 
-```{r annotate-masses-1, results="hide", message=FALSE, warning=FALSE}
+```{r annotate-masses-1, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/annotate_masses.R")
-```
-
-```{r annotate-masses-2, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(
-  names = starts_with("ann_ms1"),
-  exclude = c(
-    contains("benchmark"),
-    contains("par_"),
-    contains("paths")
-  ),
-  targets_only = TRUE,
-  degree_from = 8
-)
 ```
 
 ### Spectral
 
-In order to perform MS^2^ annotation based on an **I**n **S**ilico **D**ata**B**ase, please follow the following steps.
-
-#### ISDB
-
-```{r annotate-spectra-1, results="hide", message=FALSE, warning=FALSE}
+```{r annotate-spectra-1, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/annotate_spectra.R")
 ```
 
@@ -77,9 +60,7 @@ We use the `spectral entropy` from <https://doi.org/10.1038/s41592-021-01331-z> 
 In case, a python implementation of the spectral matching steps is also available at: <https://github.com/mandelbrot-project/spectral_lib_matcher>.
 The python version also includes other similarity measures.
 
-And as before:
-
-```{r annotate-spectra-2, results="hide", message=FALSE, warning=FALSE}
+```{r annotate-spectra-2, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_annotations_spectra.R")
 ```
 
@@ -90,21 +71,6 @@ source(file = "inst/scripts/prepare_annotations_spectra.R")
 
 ```{r annotate-gnps, eval=FALSE, message=FALSE, warning=FALSE, include=FALSE, results="hide"}
 source(file = "inst/scripts/prepare_annotations_gnps.R")
-```
-
-You now have all your spectral annotations:
-
-```{r annotate-spectra-4, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
-targets::tar_visnetwork(
-  names = starts_with("ann_spe"),
-  exclude = c(
-    contains("benchmark"),
-    contains("par_"),
-    contains("paths")
-  ),
-  targets_only = TRUE,
-  degree_from = 8
-)
 ```
 
 ### Fingerprint-based
@@ -142,9 +108,8 @@ source(file = "inst/scripts/get_example_sirius.R")
 ```
 
 The sirius workspace should have `yourPattern_sirius` as name (else it will not be found).
-Then prepare it:
 
-```{r prepare-sirius, results="hide", message=FALSE, warning=FALSE}
+```{r prepare-sirius, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_annotations_sirius.R")
 ```
 
@@ -161,7 +126,7 @@ targets::tar_visnetwork(
 )
 ```
 
-You now have your annotations well prepared and can keep on formatting the rest of your metadata.
+Annotations are now prepared and can be used for further processing.
 Your features are not only informed with structural information but also, chemical class information.
 The latter might be corresponding **or not** to the chemical class of your annotated structure, depending on the consistency of your annotations.
 
@@ -177,13 +142,12 @@ We are currently also working on CANOPUS integration for chemical class annotati
 
 ### Generating a network
 
-A network can be generated using:
+A network is generated during the process.
+The edges are created based on the `spectral entropy similarity` calculated between your spectra (see <https://doi.org/10.1038/s41592-021-01331-z>).
 
-```{r create-edges, results="hide", message=FALSE, warning=FALSE}
+```{r create-edges, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/create_edges_spectra.R")
 ```
-
-Again, the edges are created based on the `spectral entropy similarity` calculated between your spectra (see <https://doi.org/10.1038/s41592-021-01331-z>).
 
 If needed, you can get an example of what your minimal feature table should look like by running (no parameters needed):
 
@@ -191,23 +155,19 @@ If needed, you can get an example of what your minimal feature table should look
 source(file = "inst/scripts/get_example_features.R")
 ```
 
-### Formatting
-
-Before running the corresponding code, do not forget to modify `inst/params/user/prepare_features_tables.yaml`, `inst/params/user/prepare_features_edges.yaml`, `inst/params/user/create_components.yaml`, and `inst/params/user/prepare_features_components.yaml` accordingly.
-
-```{r prepare-features, results="hide", message=FALSE, warning=FALSE}
+```{r prepare-features, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_features_tables.R")
 ```
 
-```{r prepare-edges, results="hide", message=FALSE, warning=FALSE}
+```{r prepare-edges, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_features_edges.R")
 ```
 
-```{r create-components, results="hide", message=FALSE, warning=FALSE}
+```{r create-components, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/create_components.R")
 ```
 
-```{r prepare-components, results="hide", message=FALSE, warning=FALSE}
+```{r prepare-components, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_features_components.R")
 ```
 
@@ -218,9 +178,7 @@ If all your features come from a single extract, it will attribute the biologica
 If you have multiple extracts aligned, it will take the *n* (according to your parameters) highest intensities of your aligned feature table and attribute the biological source of corresponding extracts.
 <!-- It can take both manual inputs or GNPS metadata directly from your GNPS job ID. -->
 
-Before running the corresponding code, do not forget to modify `inst/params/user/prepare_taxa.yaml`.
-
-```{r prepare-taxa, results="hide", message=FALSE, warning=FALSE}
+```{r prepare-taxa, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_taxa.R")
 ```
 
@@ -231,9 +189,7 @@ based on your own internal (experimental or predicted) retention times library.
 It is optional. 
 If you do not have one, it will simply group the annotations of all tools. 
 
-Before running the corresponding code, do not forget to modify `inst/params/user/filter_annotations.yaml`.
-
-```{r filter-annotations, results="hide", message=FALSE, warning=FALSE}
+```{r filter-annotations, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/filter_annotations.R")
 ```
 
