--- a/vignettes/I-gathering.Rmd
+++ b/vignettes/I-gathering.Rmd
@@ -40,13 +40,13 @@ Some default parameters are available and can be accessed in the `inst/params/de
 If you prefer accessing them through the GUI, you can do so.
 Each parameter contains a small help menu, you can click on, as illustrated below.
 
-![First screenshot](./figures/screenshot-1.pdf){width=100%}
+![](./figures/screenshot-1.pdf){width=100%}
 
-![Second screenshot](./figures/screenshot-2.pdf){width=100%}
+![](./figures/screenshot-2.pdf){width=100%}
 
 For example, if you want to have an output compatible with Cytoscape, with multiple annotations per features:
 
-![Third screenshot](./figures/screenshot-3.pdf){width=100%}
+![](./figures/screenshot-3.pdf){width=100%}
 
 All parameters will be saved and reported at the end of your analysis.
 
@@ -170,8 +170,6 @@ targets::tar_visnetwork(
   names = matches("lib_sop_lot"),
   exclude = c(
     contains("benchmark"),
-    contains("par_"),
-    contains("paths")
   ),
   targets_only = TRUE,
   degree_from = 8
