--- a/vignettes/I-gathering.Rmd
+++ b/vignettes/I-gathering.Rmd
@@ -40,13 +40,13 @@ Some default parameters are available and can be accessed in the `inst/params/de
 If you prefer accessing them through the GUI, you can do so.
 Each parameter contains a small help menu, you can click on, as illustrated below.
 
-![](./figures/screenshot-1.pdf){width=100%}
+![](./figures/screenshot-1.svg)
 
-![](./figures/screenshot-2.pdf){width=100%}
+![](./figures/screenshot-2.svg)
 
 For example, if you want to have an output compatible with Cytoscape, with multiple annotations per features:
 
-![](./figures/screenshot-3.pdf){width=100%}
+![](./figures/screenshot-3.svg)
 
 All parameters will be saved and reported at the end of your analysis.
 
