--- a/vignettes/I-gathering.Rmd
+++ b/vignettes/I-gathering.Rmd
@@ -24,6 +24,9 @@ knitr::opts_chunk$set(
 knitr::opts_knit$set(root.dir = "..")
 ```
 
+```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
+library("timaR")
+```
 This vignette describes...
 
 * All parameters you need
