--- a/vignettes/articles/II-preparing.Rmd
+++ b/vignettes/articles/II-preparing.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-knitr::opts_knit$set(root.dir = "..")
+knitr::opts_knit$set(root.dir = "../..")
 ```
 
 ```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
