--- a/vignettes/articles/II-preparing.Rmd
+++ b/vignettes/articles/II-preparing.Rmd
@@ -130,11 +130,14 @@ You can get an example running:
 source(file = "inst/scripts/get_example_sirius.R")
 ```
 
-The sirius workspace should have `yourPattern_sirius` as name and be placed in `data/interim/annotations` (else it will not be found).
+The sirius workspace should ideally have `yourPattern_sirius` as name and be placed in `data/interim/annotations` (else it will not be found by default except you provide the right path).
 
 ```{r prepare-sirius, results="hide", message=FALSE, warning=FALSE, include = FALSE}
 source(file = "inst/scripts/prepare_annotations_sirius.R")
 ```
+
+If you want to know how we attempt to combine the CSI score with other ones, see [R/transform_score_sirius_csi.R](https://github.com/taxonomicallyinformedannotation/tima-r/blob/main/R/transform_score_sirius_csi.R)
+Note that starting from SIRIUS6, the _approx_ confidence score is the one considered, and not the exact one.
 
 ```{r annotations-all, echo=FALSE, message=FALSE, warning=FALSE, out.width="100%"}
 targets::tar_visnetwork(
