--- a/vignettes/articles/III-processing.Rmd
+++ b/vignettes/articles/III-processing.Rmd
@@ -25,7 +25,7 @@ knitr::opts_knit$set(root.dir = "../..")
 ```
 
 ```{r timar, results="hide", message=FALSE, warning=FALSE, include = FALSE}
-library("timaR")
+library("tima")
 ```
 
 This vignette describes how **T**axonomically **I**nformed **M**etabolite **A**nnotation is performed.
